--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<artifactId>${swt.artifactId}</artifactId>
 			<version>4.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
+		</dependency>
 	</dependencies>
 	
 	<profiles>
