--- a/settings.properties
+++ b/settings.properties
@@ -2,9 +2,9 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <entry key="HtmlFontSize">20</entry>
-<entry key="DataDirectory">%userprofile%\My Pictures</entry>
+<entry key="DataDirectory">c:\guideme\guides</entry>
 <entry key="sash1Weights1">350</entry>
-<entry key="FontSize">20</entry>
+<entry key="FontSize">14</entry>
 <entry key="Debug">false</entry>
 <entry key="sash1Weights0">350</entry>
 <entry key="sash2Weights1">200</entry>
