--- a/settings.properties
+++ b/settings.properties
@@ -2,7 +2,7 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
 <entry key="HtmlFontSize">20</entry>
-<entry key="DataDirectory">c:\guideme\guides</entry>
+<entry key="DataDirectory">C:\James\git\GuideMe</entry>
 <entry key="sash1Weights1">350</entry>
 <entry key="FontSize">14</entry>
 <entry key="Debug">false</entry>
