More work on scripting and a test harness for the scripting.

--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,12 @@
 			<artifactId>jface</artifactId>
 			<version>3.0.1</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>rhino</groupId>
+			<artifactId>js</artifactId>
+			<version>1.7R1</version>
+		</dependency>
+						
 	</dependencies>
 	
 	<profiles>
