--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,12 @@
 			<artifactId>js</artifactId>
 			<version>1.7R1</version>
 		</dependency>
-						
+		<dependency>
+			<groupId>uk.co.caprica</groupId>
+			<artifactId>vlcj</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+								
 	</dependencies>
 	
 	<profiles>
