--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 			<artifactId>velocity</artifactId>
 			<version>1.7</version>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>swt</groupId>
 			<artifactId>jface</artifactId>
 			<version>3.0.1</version>
@@ -73,7 +73,7 @@
 		<dependency>
 			<groupId>uk.co.caprica</groupId>
 			<artifactId>vlcj</artifactId>
-			<version>2.4.0</version>
+			<version>3.0.0</version>
 		</dependency>
 								
 	</dependencies>
@@ -92,7 +92,7 @@
 			</properties>
 		</profile>
 		<profile>
-			<id>windows</id>
+			<id>windows.X86</id>
 			<activation>
 				<os>
 					<family>windows</family>
