--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,13 @@
 			<artifactId>vlcj</artifactId>
 			<version>3.0.0</version>
 		</dependency>
-								
+		<dependency>
+			<groupId>org.imgscalr</groupId>
+			<artifactId>imgscalr-lib</artifactId>
+			<version>4.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>								
 	</dependencies>
 	
 	<profiles>
