--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,12 @@
 			<artifactId>commons-codec</artifactId>
 			<version>20041127.091804</version>
 		</dependency>
-  	</dependencies>
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+	</dependencies>
 
 	<profiles>
 		<profile>
