--- a/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/branding/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -1,2 +1,7 @@
 currentVersion=GuideMe {0}
 LBL_splash_window_title=Starting GuideMe
+SPLASH_HEIGHT=170
+SPLASH_WIDTH=690
+SplashProgressBarBounds=0,150,690,3
+SplashRunningTextBounds=10,153,680,14
+SplashRunningTextFontSize=10
