--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,9 @@
 app.name=${branding.token}
 app.title=GuideMe
+auxiliary.org-netbeans-modules-apisupport-installer.license-file=LICENSE
+auxiliary.org-netbeans-modules-apisupport-installer.os-linux=true
+auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
+auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
+auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
+auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 modules=
