--- a/guideme.project/nbproject/platform.properties
+++ b/guideme.project/nbproject/platform.properties
@@ -37,43 +37,32 @@ disabled.modules=\
     org.jdesktop.layout,\
     org.netbeans.api.debugger,\
     org.netbeans.api.java.classpath,\
-    org.netbeans.api.search,\
     org.netbeans.api.visual,\
     org.netbeans.api.xml,\
     org.netbeans.core.browser,\
     org.netbeans.core.browser.webview,\
+    org.netbeans.core.execution,\
     org.netbeans.core.ide,\
-    org.netbeans.core.io.ui,\
     org.netbeans.core.multitabs.project,\
-    org.netbeans.core.nativeaccess,\
-    org.netbeans.core.netigso,\
-    org.netbeans.core.osgi,\
     org.netbeans.lib.terminalemulator,\
-    org.netbeans.lib.uihandler,\
     org.netbeans.libs.antlr3.runtime,\
     org.netbeans.libs.bytelist,\
     org.netbeans.libs.commons_net,\
-    org.netbeans.libs.felix,\
     org.netbeans.libs.freemarker,\
     org.netbeans.libs.git,\
     org.netbeans.libs.ini4j,\
-    org.netbeans.libs.javafx,\
     org.netbeans.libs.jaxb,\
-    org.netbeans.libs.jna.platform,\
     org.netbeans.libs.jsch.agentproxy,\
     org.netbeans.libs.json_simple,\
     org.netbeans.libs.jsr223,\
-    org.netbeans.libs.junit4,\
     org.netbeans.libs.jvyamlb,\
     org.netbeans.libs.lucene,\
     org.netbeans.libs.nashorn,\
-    org.netbeans.libs.osgi,\
     org.netbeans.libs.smack,\
     org.netbeans.libs.svnClientAdapter,\
     org.netbeans.libs.svnClientAdapter.javahl,\
     org.netbeans.libs.svnClientAdapter.svnkit,\
     org.netbeans.libs.swingx,\
-    org.netbeans.libs.testng,\
     org.netbeans.libs.xerces,\
     org.netbeans.modules.autoupdate.cli,\
     org.netbeans.modules.autoupdate.services,\
@@ -125,7 +114,6 @@ disabled.modules=\
     org.netbeans.modules.editor.lib,\
     org.netbeans.modules.editor.lib2,\
     org.netbeans.modules.editor.macros,\
-    org.netbeans.modules.editor.mimelookup.impl,\
     org.netbeans.modules.editor.plain,\
     org.netbeans.modules.editor.plain.lib,\
     org.netbeans.modules.editor.search,\
@@ -137,6 +125,7 @@ disabled.modules=\
     org.netbeans.modules.extbrowser,\
     org.netbeans.modules.extexecution,\
     org.netbeans.modules.extexecution.impl,\
+    org.netbeans.modules.favorites,\
     org.netbeans.modules.git,\
     org.netbeans.modules.gototest,\
     org.netbeans.modules.gsf.codecoverage,\
@@ -159,7 +148,6 @@ disabled.modules=\
     org.netbeans.modules.hudson.ui,\
     org.netbeans.modules.ide.kit,\
     org.netbeans.modules.image,\
-    org.netbeans.modules.javahelp,\
     org.netbeans.modules.javascript2.debug,\
     org.netbeans.modules.javascript2.editor,\
     org.netbeans.modules.javascript2.extjs,\
@@ -168,8 +156,6 @@ disabled.modules=\
     org.netbeans.modules.javascript2.knockout,\
     org.netbeans.modules.jellytools.ide,\
     org.netbeans.modules.jumpto,\
-    org.netbeans.modules.keyring.fallback,\
-    org.netbeans.modules.keyring.impl,\
     org.netbeans.modules.languages,\
     org.netbeans.modules.languages.diff,\
     org.netbeans.modules.languages.manifest,\
@@ -180,17 +166,16 @@ disabled.modules=\
     org.netbeans.modules.localtasks,\
     org.netbeans.modules.mercurial,\
     org.netbeans.modules.mylyn.util,\
-    org.netbeans.modules.netbinox,\
     org.netbeans.modules.notifications,\
     org.netbeans.modules.options.editor,\
     org.netbeans.modules.parsing.api,\
     org.netbeans.modules.parsing.lucene,\
     org.netbeans.modules.parsing.ui,\
-    org.netbeans.modules.print,\
     org.netbeans.modules.print.editor,\
-    org.netbeans.modules.progress.ui,\
     org.netbeans.modules.project.ant,\
+    org.netbeans.modules.project.indexingbridge,\
     org.netbeans.modules.project.libraries,\
+    org.netbeans.modules.projectui,\
     org.netbeans.modules.projectui.buildmenu,\
     org.netbeans.modules.properties,\
     org.netbeans.modules.properties.syntax,\
@@ -204,7 +189,6 @@ disabled.modules=\
     org.netbeans.modules.spellchecker.bindings.properties,\
     org.netbeans.modules.spellchecker.dictionary_en,\
     org.netbeans.modules.spellchecker.kit,\
-    org.netbeans.modules.spi.actions,\
     org.netbeans.modules.subversion,\
     org.netbeans.modules.swing.validation,\
     org.netbeans.modules.target.iterator,\
@@ -216,7 +200,6 @@ disabled.modules=\
     org.netbeans.modules.team.ide,\
     org.netbeans.modules.templates,\
     org.netbeans.modules.terminal,\
-    org.netbeans.modules.uihandler,\
     org.netbeans.modules.usersguide,\
     org.netbeans.modules.utilities,\
     org.netbeans.modules.utilities.project,\
@@ -257,6 +240,7 @@ disabled.modules=\
     org.netbeans.spi.viewmodel,\
     org.netbeans.swing.dirchooser,\
     org.openide.compat,\
+    org.openide.execution,\
     org.openide.options,\
     org.openide.util.enumerations,\
     org.openidex.util
