--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,4 +6,7 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
-modules=
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
+modules=\
+    ${project.org.guideme.guideme.nb.project}
+project.org.guideme.guideme.nb.project=guideme.project
