Renamed guideme.project to guideme.nb.project to indicate netbeans specific projects.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,4 +9,4 @@ auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 modules=\
     ${project.org.guideme.guideme.nb.project}
-project.org.guideme.guideme.nb.project=guideme.project
+project.org.guideme.guideme.nb.project=guideme.nb.project
