--- a/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
+++ b/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
@@ -4,3 +4,8 @@ GuideMeLibraryPanelVisual.projectLocationLabel.text=Project &Location:
 GuideMeLibraryPanelVisual.projectNameLabel.text=Project &Name:
 GuideMeLibraryPanelVisual.createdFolderLabel.text=Project &Folder:
 GuideMeLibraryPanelVisual.browseButton.actionCommand=BROWSE
+GuideMeGuidePanelVisual.projectNameLabel.text=Project &Name:
+GuideMeGuidePanelVisual.projectLocationLabel.text=Project &Location:
+GuideMeGuidePanelVisual.browseButton.actionCommand=BROWSE
+GuideMeGuidePanelVisual.browseButton.text=Br&owse...
+GuideMeGuidePanelVisual.createdFolderLabel.text=Project &Folder:
