--- a/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
+++ b/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
@@ -1,11 +1,11 @@
 LBL_CreateProjectStep=Name and Location
 GuideMeLibraryPanelVisual.browseButton.text=Br&owse...
-GuideMeLibraryPanelVisual.projectLocationLabel.text=Project &Location:
-GuideMeLibraryPanelVisual.projectNameLabel.text=Project &Name:
-GuideMeLibraryPanelVisual.createdFolderLabel.text=Project &Folder:
+GuideMeLibraryPanelVisual.projectLocationLabel.text=Library &Location:
+GuideMeLibraryPanelVisual.projectNameLabel.text=Library &Name:
+GuideMeLibraryPanelVisual.createdFolderLabel.text=Library &Folder:
 GuideMeLibraryPanelVisual.browseButton.actionCommand=BROWSE
-GuideMeGuidePanelVisual.projectNameLabel.text=Project &Name:
-GuideMeGuidePanelVisual.projectLocationLabel.text=Project &Location:
+GuideMeGuidePanelVisual.projectNameLabel.text=Guide &Name:
+GuideMeGuidePanelVisual.projectLocationLabel.text=Guide &Location:
 GuideMeGuidePanelVisual.browseButton.actionCommand=BROWSE
 GuideMeGuidePanelVisual.browseButton.text=Br&owse...
-GuideMeGuidePanelVisual.createdFolderLabel.text=Project &Folder:
+GuideMeGuidePanelVisual.createdFolderLabel.text=Guide &Folder:
