Starting all over again (Library as a project was not working out).

--- a/guideme.model/nbproject/platform.properties
+++ b/guideme.model/nbproject/platform.properties
@@ -41,7 +41,6 @@ disabled.modules=\
     org.netbeans.api.xml,\
     org.netbeans.core.browser,\
     org.netbeans.core.browser.webview,\
-    org.netbeans.core.execution,\
     org.netbeans.core.ide,\
     org.netbeans.core.multitabs.project,\
     org.netbeans.lib.terminalemulator,\
@@ -51,6 +50,7 @@ disabled.modules=\
     org.netbeans.libs.freemarker,\
     org.netbeans.libs.git,\
     org.netbeans.libs.ini4j,\
+    org.netbeans.libs.javafx,\
     org.netbeans.libs.jaxb,\
     org.netbeans.libs.jsch.agentproxy,\
     org.netbeans.libs.json_simple,\
@@ -125,7 +125,6 @@ disabled.modules=\
     org.netbeans.modules.extbrowser,\
     org.netbeans.modules.extexecution,\
     org.netbeans.modules.extexecution.impl,\
-    org.netbeans.modules.favorites,\
     org.netbeans.modules.git,\
     org.netbeans.modules.gototest,\
     org.netbeans.modules.gsf.codecoverage,\
@@ -173,9 +172,7 @@ disabled.modules=\
     org.netbeans.modules.parsing.ui,\
     org.netbeans.modules.print.editor,\
     org.netbeans.modules.project.ant,\
-    org.netbeans.modules.project.indexingbridge,\
     org.netbeans.modules.project.libraries,\
-    org.netbeans.modules.projectui,\
     org.netbeans.modules.projectui.buildmenu,\
     org.netbeans.modules.properties,\
     org.netbeans.modules.properties.syntax,\
@@ -240,7 +237,6 @@ disabled.modules=\
     org.netbeans.spi.viewmodel,\
     org.netbeans.swing.dirchooser,\
     org.openide.compat,\
-    org.openide.execution,\
     org.openide.options,\
     org.openide.util.enumerations,\
     org.openidex.util
