--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,5 +7,7 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 modules=\
-    ${project.org.guideme.guideme.model}
+    ${project.org.guideme.guideme.model}:\
+    ${project.org.guideme.guideme.nb.project}
 project.org.guideme.guideme.model=guideme.model
+project.org.guideme.guideme.nb.project=guideme.nb.project
