First step in download from Milovana implemented.

--- a/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
+++ b/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
@@ -1,2 +1,22 @@
 OpenIDE-Module-Display-Category=GuideMe
 OpenIDE-Module-Name=GuideMe Milovana Download
+HtmlTeaseDownloadVisualPanel1.browseButton.text=Br&owse...
+HtmlTeaseDownloadVisualPanel1.projectNameLabel.text=Tease ID:
+HtmlTeaseDownloadVisualPanel1.browseButton.actionCommand=BROWSE
+HtmlTeaseDownloadVisualPanel1.downloadLocationLabel.text=Download &Location:
+DownloadHtmlVisualPanel1.jLabel1.text=Tease ID:
+DownloadHtmlVisualPanel1.jLabel2.text=Download Location:
+DownloadHtmlVisualPanel1.jButton1.text=Browse...
+DownloadHtmlVisualPanel1.teaseIdTextField.text=
+DownloadHtmlVisualPanel1.downloadLocationTextField.text=
+MilovanaDownloadVisualPanel1.jLabel1.text=Tease ID:
+MilovanaDownloadVisualPanel1.jLabel2.text=Title:
+MilovanaDownloadVisualPanel1.goButton.toolTipText=
+MilovanaDownloadVisualPanel1.goButton.text=Go
+MilovanaDownloadVisualPanel1.titleTextField.text=
+MilovanaDownloadVisualPanel1.jLabel3.text=Author:
+MilovanaDownloadVisualPanel1.authorTextField.text=
+MilovanaDownloadVisualPanel1.teaseIdTextField.text=
+MilovanaDownloadVisualPanel1.jLabel4.text=The ID of a tease is the number at the end of the url like:
+MilovanaDownloadVisualPanel1.jLabel5.text=http://www.milovana.com/webteases/showtease.php?id=12345
+MilovanaDownloadVisualPanel1.jLabel6.text=http://www.milovana.com/webteases/showflash.php?id=12345
