--- a/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
+++ b/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
@@ -20,3 +20,8 @@ MilovanaDownloadVisualPanel1.teaseIdTextField.text=
 MilovanaDownloadVisualPanel1.jLabel4.text=The ID of a tease is the number at the end of the url like:
 MilovanaDownloadVisualPanel1.jLabel5.text=http://www.milovana.com/webteases/showtease.php?id=12345
 MilovanaDownloadVisualPanel1.jLabel6.text=http://www.milovana.com/webteases/showflash.php?id=12345
+MilovanaDownloadVisualPanel2.createdFolderLabel.text=Project &Folder:
+MilovanaDownloadVisualPanel2.browseButton.actionCommand=BROWSE
+MilovanaDownloadVisualPanel2.browseButton.text=Br&owse...
+MilovanaDownloadVisualPanel2.projectLocationLabel.text=Project &Location:
+MilovanaDownloadVisualPanel2.projectNameLabel.text=Project &Name:
