--- a/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
+++ b/guideme.milovana/src/org/guideme/guideme/milovana/Bundle.properties
@@ -25,4 +25,4 @@ MilovanaDownloadVisualPanel2.browseButton.actionCommand=BROWSE
 MilovanaDownloadVisualPanel2.browseButton.text=Br&owse...
 MilovanaDownloadVisualPanel2.projectLocationLabel.text=Project &Location:
 MilovanaDownloadVisualPanel2.projectNameLabel.text=Project &Name:
-MilovanaDownloadVisualPanel3.startDownloadButton.text=Start Download
+MilovanaDownloadVisualPanel3.jLabel1.text=Download progress:
