Sketched possible solution for player.

--- a/guideme.nb.viewer/src/org/guideme/guideme/nb/viewer/Bundle.properties
+++ b/guideme.nb.viewer/src/org/guideme/guideme/nb/viewer/Bundle.properties
@@ -1,4 +1,6 @@
 OpenIDE-Module-Name=GuideMe Viewer
-GuidePlayerTopComponent.guideTitle.AccessibleContext.accessibleName=guideTitle
-GuidePlayerTopComponent.guideTitle.text=[guide title]
-GuidePlayerTopComponent.guideTitle.toolTipText=
+GuidePlayerTopComponent.pageId.AccessibleContext.accessibleName=guideTitle
+GuidePlayerTopComponent.pageId.toolTipText=
+GuidePlayerTopComponent.pageId.text=[pageId]
+GuidePlayerTopComponent.continueButton.text=Continue
+GuidePlayerTopComponent.imageUrl.text=[imageUrl]
