Renamed Project to Guide in all netbean texts.

--- a/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
+++ b/guideme.nb.project/src/org/guideme/guideme/nb/project/templates/Bundle.properties
@@ -1,6 +1,6 @@
 LBL_CreateProjectStep=Name and Location
-EmptyGuidePanelVisual.projectNameLabel.text=Project &Name:
-EmptyGuidePanelVisual.projectLocationLabel.text=Project &Location:
+EmptyGuidePanelVisual.projectNameLabel.text=Guide &Name:
+EmptyGuidePanelVisual.projectLocationLabel.text=Guide &Location:
 EmptyGuidePanelVisual.browseButton.actionCommand=BROWSE
 EmptyGuidePanelVisual.browseButton.text=Br&owse...
-EmptyGuidePanelVisual.createdFolderLabel.text=Project &Folder:
+EmptyGuidePanelVisual.createdFolderLabel.text=Guide &Folder:
