--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -6,6 +6,7 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=true
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=true
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
+branding.locales=en_US
 modules=\
     ${project.org.guideme.guideme.model}:\
     ${project.org.guideme.guideme.nb.project}:\
