Upgrade to Java 1.8.

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -204,4 +204,5 @@ disabled.modules=\
     org.openide.options,\
     org.openide.util.enumerations,\
     org.openidex.util
+nbjdk.active=JDK_1.8
 nbplatform.active=default
