--- a/guideme.milovana/nbproject/project.properties
+++ b/guideme.milovana/nbproject/project.properties
@@ -1,4 +1,5 @@
 file.reference.antlr-4.4-complete.jar=release/modules/ext/antlr-4.4-complete.jar
+file.reference.commons-io-2.4.jar=release/modules/ext/commons-io-2.4.jar
 file.reference.commons-lang3-3.3.2.jar=release/modules/ext/commons-lang3-3.3.2.jar
 file.reference.jsoup-1.7.3.jar=release/modules/ext/jsoup-1.7.3.jar
 javac.source=1.8
