--- a/guideme.core/src/org/guideme/guideme/filesupport/Bundle.properties
+++ b/guideme.core/src/org/guideme/guideme/filesupport/Bundle.properties
@@ -1,3 +1,3 @@
 
-GuideMeVisualElement.playButton.text=Play
-GuideMeVisualElement.titleField.text=[title]
+GuideCover.playButton.text=Play
+GuideCover.titleField.text=[title]
