Empty start page.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,8 @@ auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=true
 branding.locales=en_US
 modules=\
     ${project.org.guideme.guideme.milovana}:\
-    ${project.org.guideme.guideme}
+    ${project.org.guideme.guideme}:\
+    ${project.org.guideme.guideme.startpage}
 project.org.guideme.guideme=guideme.core
 project.org.guideme.guideme.milovana=guideme.milovana
+project.org.guideme.guideme.startpage=guideme.startpage
