Moved Player to its own module.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,7 +11,9 @@ branding.locales=en_US
 modules=\
     ${project.org.guideme.guideme.milovana}:\
     ${project.org.guideme.guideme}:\
-    ${project.org.guideme.guideme.editor}
+    ${project.org.guideme.guideme.editor}:\
+    ${project.org.guideme.guideme.player.ui}
 project.org.guideme.guideme=guideme.core
 project.org.guideme.guideme.editor=guideme.editor
 project.org.guideme.guideme.milovana=guideme.milovana
+project.org.guideme.guideme.player.ui=guideme.player.ui
