--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -12,7 +12,8 @@ modules=\
     ${project.org.guideme.guideme.milovana}:\
     ${project.org.guideme.guideme}:\
     ${project.org.guideme.guideme.editor}:\
-    ${project.org.guideme.guideme.player.ui}
+    ${project.org.guideme.guideme.player.ui}:\
+    ${project.org.guideme.guideme.startpage}
     ${project.org.guideme.guideme.startpage}
 project.org.guideme.guideme=guideme.core
 project.org.guideme.guideme.editor=guideme.editor
