Added options tab for recent guides (number to remember + button to clear).

--- a/guideme.core/src/org/guideme/guideme/filesupport/Bundle.properties
+++ b/guideme.core/src/org/guideme/guideme/filesupport/Bundle.properties
@@ -1,3 +1,6 @@
 
 GuideCover.titleLabel.text=[title]
 GuideCover.authorLabel.text=[author]
+RecentGuidesPanel.jLabel1.text=Maximum number of guides to remember:
+RecentGuidesPanel.clearHistoryButton.text=Clear Recent Guides
+RecentGuidesPanel.clearHistoryButton.toolTipText=Clears the list of recently opened guides.
