Open and old TeaseMe file and save as Guide (not complete).

--- a/nbproject/platform.properties
+++ b/nbproject/platform.properties
@@ -1,18 +1,19 @@
 branding.token=guideme
 cluster.path=\
-    ${nbplatform.active.dir}/platform
+    ${nbplatform.active.dir}/platform:\
+    ${nbplatform.active.dir}/cluster
 disabled.modules=\
-    org.jdesktop.layout,\
-    org.netbeans.api.visual,\
-    org.netbeans.libs.javafx,\
-    org.netbeans.libs.jsr223,\
-    org.netbeans.modules.autoupdate.cli,\
-    org.netbeans.modules.autoupdate.services,\
-    org.netbeans.modules.autoupdate.ui,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.templates,\
+    org.netbeans.modules.autoupdate.cli,\
+    org.openide.util.enumerations,\
+    org.netbeans.modules.autoupdate.services,\
+    org.netbeans.libs.javafx,\
     org.openide.compat,\
+    org.jdesktop.layout,\
+    org.netbeans.api.visual,\
     org.openide.options,\
-    org.openide.util.enumerations
+    org.netbeans.modules.autoupdate.ui,\
+    org.netbeans.libs.jsr223
 nbjdk.active=JDK_1.8
 nbplatform.active=default
