--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -13,10 +13,12 @@ modules=\
     ${project.org.guideme.guideme}:\
     ${project.org.guideme.guideme.editor}:\
     ${project.org.guideme.guideme.player.ui}:\
-    ${project.org.guideme.guideme.startpage}
+    ${project.org.guideme.guideme.startpage}:\
+    ${project.org.guideme.guideme.teaseme}
     ${project.org.guideme.guideme.startpage}
 project.org.guideme.guideme=guideme.core
 project.org.guideme.guideme.editor=guideme.editor
 project.org.guideme.guideme.milovana=guideme.milovana
 project.org.guideme.guideme.player.ui=guideme.player.ui
 project.org.guideme.guideme.startpage=guideme.startpage
+project.org.guideme.guideme.teaseme=guideme.teaseme
