--- a/.gitignore
+++ b/.gitignore
@@ -8,98 +8,9 @@ data/
 *.jar
 *.war
 *.ear
-AATestGMProject/userSettingsUI.state
 
 guideme.iml
 
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
+.idea/
 
-AATestGMProject/TestGMProject/test.mp4
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/TestGMProject/test.jpg
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/TestGMProject.xml
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/TestGMProject.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/SWTPortTest.state
-
-AATestGMProject/startup.state
-
-.idea/workspace.xml
-
-src/main/java/org/guideme/guideme/App.java
-
-.idea/scopes/scope_settings.xml
-
-.idea/modules.xml
-
-.idea/misc.xml
-
-.idea/libraries/Maven__uk_co_caprica_vlcj_3_0_1.xml
-
-src/main/java/org/guideme/guideme/MainLogic.java
-
-.idea/libraries/Maven__swt_osgi_3_0_1.xml
-
-.idea/libraries/Maven__swt_jface_3_0_1.xml
-
-.idea/libraries/Maven__swt_runtime_3_0_1.xml
-
-.idea/libraries/Maven__stax_stax_api_1_0_1.xml
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-.idea/.name
-
-.idea/compiler.xml
-
-.idea/copyright/Avid.xml
-
-.idea/copyright/profiles_settings.xml
-
-.idea/encodings.xml
-
-.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_annotations_2_2_0.xml
-
-.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_core_2_2_0.xml
-
-.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_databind_2_2_0.xml
-
-.idea/libraries/Maven__commons_codec_commons_codec_20041127_091804.xml
-
-*.xml
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-GuideTest.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
-
-userSettingsUI.state
-
-startup.state
-
-*.dll
-
-*.dylib
-
-third-party/runtime/plugins.dat
-
-AATestGMProject/Y:\TM\Teases\SWTPortTest.state
+third-party/
