--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.2.0</version>
 		</dependency>
-            
   	    <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -75,7 +74,7 @@
 		<dependency>
 		    <groupId>org.mozilla</groupId>
 		    <artifactId>rhino</artifactId>
-		    <version>1.7R4</version>
+		    <version>1.7.7.1</version>
 		</dependency>
 		<dependency>
 			<groupId>uk.co.caprica</groupId>
