--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>xmlbeans</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>net.lingala.zip4j</groupId>
+		    <artifactId>zip4j</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
