--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,18 @@
 			</properties>
 		</profile>
 		<profile>
+			<id>Linux.x86_64</id>
+			<activation>
+				<os>
+					<family>Linux</family>
+					<arch>amd64</arch>
+				</os>
+			</activation>
+			<properties>
+				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
+			</properties>
+		</profile>
+		<profile>
 			<id>mac.x86_64</id>
 			<activation>
 				<os>
@@ -188,8 +200,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
