--- a/pom.xml
+++ b/pom.xml
@@ -26,13 +26,17 @@
 			<id>maven-eclipse-repo</id>
 			<url>http://maven-eclipse.github.io/maven</url>
 		</repository>
+	    <repository>
+	      <id>Redhat GA</id>
+	      <url>https://maven.repository.redhat.com/ga/</url>
+	    </repository>
 	</repositories>
 
   	<dependencies>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.2.0</version>
+			<version>2.9.0</version>
 		</dependency>
   	    <dependency>
 			<groupId>junit</groupId>
@@ -92,9 +96,10 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
-			<groupId>swt</groupId>
-			<artifactId>jface</artifactId>
-			<version>3.0.1</version>
+		    <groupId>org.eclipse</groupId>
+		    <artifactId>jface</artifactId>
+		    <version>3.3.0-I20070606-0010</version>
+		    <scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.mozilla/rhino
 		<dependency>
@@ -139,6 +144,11 @@
 		    <groupId>net.java.dev.jna</groupId>
 		    <artifactId>jna</artifactId>
 		    <version>4.4.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
 		</dependency>
 	</dependencies>
 
