--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</issueManagement>
 
 	<properties>
+		<swt.version>4.6.1</swt.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -59,18 +60,6 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.8.2</version>
 		</dependency>
-		<!--<dependency> <groupId>org.eclipse.swt</groupId> <artifactId>org.eclipse.swt.win32.win32.x86</artifactId> 
-			<version>4.6.1</version> <classifier>debug</classifier> </dependency> -->
-		<dependency>
-			<groupId>org.eclipse.swt</groupId>
-			<artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
-			<version>4.6.1</version>
-		</dependency>
-		<!--<dependency> <groupId>org.eclipse.swt</groupId> <artifactId>org.eclipse.swt.gtk.linux.x86</artifactId> 
-			<version>4.6.1</version> </dependency> <dependency> <groupId>org.eclipse.swt</groupId> 
-			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId> <version>4.6.1</version> 
-			</dependency> <dependency> <groupId>org.eclipse.swt</groupId> <artifactId>org.eclipse.swt.cocoa.macosx.x86_64</artifactId> 
-			<version>4.6.1</version> </dependency> -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
@@ -159,8 +148,15 @@
 			<properties>
 				<swt.artifactId>org.eclipse.swt.gtk.linux.x86</swt.artifactId>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
-		<profile>
+ 		<profile>
 			<id>Linux.x86_64</id>
 			<activation>
 				<os>
@@ -171,18 +167,13 @@
 			<properties>
 				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
 			</properties>
-		</profile>
- 		<profile>
-			<id>Linux.x86_64</id>
-			<activation>
-				<os>
-					<family>Linux</family>
-					<arch>x86_64</arch>
-				</os>
-			</activation>
-			<properties>
-				<swt.artifactId>org.eclipse.swt.gtk.linux.x86_64</swt.artifactId>
-			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 		<profile>
 			<id>mac.x86_64</id>
@@ -195,6 +186,13 @@
 			<properties>
 				<swt.artifactId>org.eclipse.swt.cocoa.macosx.x86_64</swt.artifactId>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 		<profile>
 			<id>windows.X86</id>
@@ -207,10 +205,26 @@
 			<properties>
 				<swt.artifactId>org.eclipse.swt.win32.win32.x86</swt.artifactId>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+				<!--
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+					<classifier>debug</classifier>
+				</dependency>
+				-->
+			</dependencies>
 		</profile>
 		<profile>
 			<id>windows</id>
 			<activation>
+				<activeByDefault>true</activeByDefault>
 				<os>
 					<family>windows</family>
 					<arch>amd64</arch>
@@ -219,6 +233,13 @@
 			<properties>
 				<swt.artifactId>org.eclipse.swt.win32.win32.x86_64</swt.artifactId>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt</groupId>
+					<artifactId>${swt.artifactId}</artifactId>
+					<version>${swt.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 
